# llm-ticket-triage

./: .gitignore  pyproject.toml
scripts/: validate_data.py
src/ticket_triage/: data.py  schema.py
tests/: test_data.py
