[project]
name = "llm-ticket-triage"
version = "0.1.0"
description = "QLoRA fine-tuned LLM that triages support tickets into structured JSON"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.13.4",
]   # ML deps added at the training step, once I confirm current versions

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ticket_triage"]

[tool.ruff]
line-length = 100
target-version = "py310"
[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
